Migrated from springfox to springdocs