@@ -11,7 +11,7 @@ public class ResourceNotFoundException extends RuntimeException {
 	private String fieldName;
 	private long fieldValue;
 	public ResourceNotFoundException(String resourceName, String fieldName, long fieldValue) {
-		super(String.format("Resource Name: %s is not found for %s : %d", resourceName , fieldName , fieldValue));
+		super("Resource Name: %s is not found for %s : %d".formatted(resourceName, fieldName, fieldValue));
 		this.resourceName = resourceName;
 		this.fieldName = fieldName;
 		this.fieldValue = fieldValue;
